--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body
 background-color: black;
   color: red;
   font-size: 12pt;
-  font family:Arial;
+  font-family:Arial;
 }
 
 h1;
 {
   color: blue;
-  font family:Arial;
+  font-family:Arial;
 }
