--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset"UTF-8"
 
 body {
-  background-color: black;
+  background-color: #f3f3f3;
   color: red;
   font-size: 12 pt;
   font-family: Arial;
