--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset"UTF-8"
 
 body {
-  background-color: #333;
+  background-color: #FFCF96;
   color: red;
   font-size: 12 pt;
   font-family: Arial;
